--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,6 @@
-Salvatore Sanfilippo <antirez@invece.org>
+Camilo E. Hidalgo Estevez <camilohe@gmail.com> based on 
+visitors <http://www.hping.org/visitors> by Salvatore 
+Sanfilippo <antirez@invece.org>. 
 
-Other people contributing ideas or bug reports are listed
-in the Changelog file. Note that there are no contributors
-of source code, that's all written by Salvatore Sanfilippo
-(see the "HOW TO HELP" section of the README file to know
-why, I'm not happy about it).
-
-
+Note that the major part of the source code was written by 
+Salvatore Sanfilippo.
