added travis build status to README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-WELCOME TO VISITED 0.21
+WELCOME TO VISITED 0.21 -- [![Build Status](https://travis-ci.org/camilohe/visited.svg?branch=master)](https://travis-ci.org/camilohe/visited)
 -----------------------
 
 Hello, this is Visited,
